fix: fixed groups containers overflow

--- a/codebuddy-repo/src/pages/Grupo/Grupos.module.css
+++ b/codebuddy-repo/src/pages/Grupo/Grupos.module.css
@@ -50,8 +50,11 @@
 
 .groupsGrid {
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(2, 1fr);
-  padding-right: 15%;
+  overflow: scroll;
+  padding-right: 10%;
+  max-height: 70vh;
 }
 
 .groupLink {
